--- a/package.json
+++ b/package.json
@@ -71,8 +71,11 @@
     "path-browserify": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^5.3.5",
     "url": "^0.11.0",
     "util": "^0.12.4"
   },
