--- a/package.json
+++ b/package.json
@@ -62,9 +62,14 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@rocket.chat/fuselage": "^0.31.14",
+    "@rocket.chat/fuselage-hooks": "^0.31.14",
+    "@rocket.chat/icons": "^0.31.14",
+    "@rocket.chat/message-parser": "^0.31.14",
     "@rocket.chat/sdk": "^0.2.9-2",
     "assert": "^2.0.0",
     "dotenv": "^16.0.1",
+    "emojione": "^4.5.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "os-browserify": "^0.3.0",
@@ -95,6 +100,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.59",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.59",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/emojione": "^2.2.6",
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
