--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@rocket.chat/fuselage-hooks": "^0.31.14",
     "@rocket.chat/icons": "^0.31.14",
     "@rocket.chat/message-parser": "^0.31.14",
-    "@rocket.chat/sdk": "^0.2.9-2",
+    "@rocket.chat/sdk": "1.0.0-alpha.42",
     "assert": "^2.0.0",
     "dotenv": "^16.0.1",
     "emojione": "^4.5.0",
@@ -110,6 +110,7 @@
     "auto-changelog": "^2.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "bufferutil": "^4.0.6",
     "css-loader": "^6.2.0",
     "electron": "^18.0.3",
     "electron-devtools-installer": "^3.2.0",
@@ -129,6 +130,7 @@
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "utf-8-validate": "^5.0.9"
   }
 }
