--- a/package.json
+++ b/package.json
@@ -78,9 +78,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
