--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
